# aurora_tracker

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
data/: calibration0g.yaml  calibration1000g.yaml  calibration1500g.yaml  calibration150g.yaml  calibration2000g.yaml  calibration200g.yaml  calibration2500g.yaml  calibration250g.yaml  calibration300g.yaml  calibration350g.yaml  calibration500g.yaml  calibration50g.yaml  gravity0g.yaml  gravity100g.yaml  gravity120g.yaml  gravity20g.yaml  gravity50g.yaml  gravity70g.yaml  gravityg.yaml
src/: CMakeLists.txt  main.cpp
src/aurora/: auroratracker.cpp  vtkFrameToTimeConverter.cxx  vtkNDITracker.cxx  vtkTracker.cxx  vtkTrackerBuffer.cxx  vtkTrackerTool.cxx
src/aurora/interface/: aurora_interface.cpp
src/include/aurora/: auroratracker.h  vtkFrameToTimeConverter.h  vtkNDITracker.h  vtkTracker.h  vtkTrackerBuffer.h  vtkTrackerTool.h
src/include/aurora/interface/: aurora_interface.hpp
src/interface/: aurora_interface.cpp
